# ws_all

managing_pkg/: CMakeLists.txt  package.xml
managing_pkg/srv/: MissionDone.srv
ugv_ws/: asp_final_proj.rviz
ugv_ws/install/: local_setup.sh  setup.sh
ugv_ws/install/gazebo_env_setup/lib/gazebo_env_setup/: pose_tf_broadcaster
ugv_ws/install/gazebo_env_setup/share/gazebo_env_setup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ugv_ws/install/gazebo_env_setup/share/gazebo_env_setup/cmake/: gazebo_env_setupConfig-version.cmake  gazebo_env_setupConfig.cmake
ugv_ws/install/gazebo_env_setup/share/gazebo_env_setup/environment/: ament_prefix_path.dsv  path.dsv
ugv_ws/install/gazebo_env_setup/share/gazebo_env_setup/launch/: pose_tf_broadcaster.launch.py  topic_bridge.launch.py
ugv_ws/install/ugv_controller/lib/ugv_controller/: manual_path_logger_node  path_follower_node
ugv_ws/install/ugv_controller/share/ugv_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  mission1.csv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ugv_ws/install/ugv_controller/share/ugv_controller/cmake/: ugv_controllerConfig-version.cmake  ugv_controllerConfig.cmake
ugv_ws/install/ugv_controller/share/ugv_controller/environment/: ament_prefix_path.dsv  path.dsv
ugv_ws/install/ugv_controller/share/ugv_controller/launch/: path_follower.launch.py
ugv_ws/log/: latest_build  latest_list
ugv_ws/src/gazebo_env_setup/: CMakeLists.txt
ugv_ws/src/gazebo_env_setup/launch/: topic_bridge.launch.py
ugv_ws/src/gazebo_env_setup/src/: pose_tf_broadcaster.cpp
ugv_ws/src/ugv_controller/: CMakeLists.txt  mission1.csv
ugv_ws/src/ugv_controller/launch/: path_follower.launch.py
ugv_ws/src/ugv_controller/src/: manual_path_logger_node.cpp  path_follower_node.cpp
ws_px4_controls/install/: local_setup.sh  setup.sh
ws_px4_controls/install/px4_msgs/share/px4_msgs/: package.sh
ws_px4_controls/install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
ws_px4_controls/install/px4_ros_com/share/px4_ros_com/: local_setup.sh  package.sh
ws_px4_controls/install/uav_controller_pkg/lib/uav_controller_pkg/: offboard_control_node
ws_px4_controls/install/uav_controller_pkg/share/uav_controller_pkg/: local_setup.sh  package.sh
ws_px4_controls/log/: latest_build
ws_px4_controls/ws_px4_controls/: optimized_path.csv  optimized_path2.csv
ws_px4_controls/ws_px4_controls/src/px4_ros_com/: CMakeLists.txt
ws_px4_controls/ws_px4_controls/src/uav_controller_pkg/: CMakeLists.txt  package.xml
ws_px4_controls/ws_px4_controls/src/uav_controller_pkg/src/: uav_controller.cpp
(+5 files in other folders)
